
syntax = "proto3";

option java_multiple_files = true;
// 编译生成的文件路径
package com.hu.grpc.compileFile;

// 定义入参类型
message Person {
    // first_name 作为第一个参数
    string first_name = 1;
    // last_name 作为第二个参数
    string last_name = 2;
}

// 定义返回值类型
message Greeting {
    // 返回结果
    string message = 1;
}
message PinnedPart{
    int32 partType = 1;
    bool ignoreMcc = 2;
    repeated Greeting dataSet = 3;
}
// 服务名字
service HelloWorldService {
    // 方法 sayHello
    // 入参 Person
    // 返回值 Greeting
    rpc sayHello (Person) returns (PinnedPart);

    rpc sayGreeting (Person) returns (stream Greeting);
}